gccida/c3/eiremain
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eiremain/src/real.c:6244:12: error: expected expression
*( _OWORD *)equot = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eiremain/src/real.c:6244:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)equot = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eiremain/src/real.c:6396:12: error: expected expression
*( _OWORD *)v9 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eiremain/src/real.c:6396:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v9 = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eiremain/src/obj/real.o] Error 1
